# app-signal-editor

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile.alpine  Dockerfile.ubuntu  GOVERNANCE.md  LICENSE.md  README.md  SECURITY.md  TO_DO.md  project.json  project.metadata.json  project_manager.bat  pyproject.toml  requirements.txt
.githooks/: commit-template.txt
.githooks/hooks/: commit-msg  pre-commit  pre-push  prepare-commit-msg
.github/: .gitcommit  CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  release.yml
apps/my_module/gui/: CMakeLists.txt  main.cpp
apps/proro/gui/: CMakeLists.txt  main.cpp
apps/signal_editor/gui/: CMakeLists.txt  app_icon.rc  bootstrap.cpp  bootstrap.h  main.cpp  resources.qrc
apps/sssss/gui/: CMakeLists.txt  main.cpp
cmake/: ExternalLibraries.cmake  ProjectOptions.cmake
cmake/FindModules/: README.md
cmake/Modules/: CompilerWarnings.cmake  Coverage.cmake  Dependencies.cmake  Documentation.cmake  Doxygen.cmake  Git.cmake  IPO.cmake  Install.cmake  Packaging.cmake  ProjectOptions.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Testing.cmake  Utils.cmake  Version.cmake
cmake/Templates/: Config.cmake.in  Version.cmake.in  installer.iss.in
cmake/Toolchains/: gcc.cmake  mingw.cmake
deploy/config/: customer_profile.schema.json  module_catalog.json
docs/: feature_branch_file_map.md
docs/architecture/: architecture_overview.md  c4_component.md  c4_container.md  c4_context.md  hexagonal_skeleton_structure.md
docs/developer/: README.md  filesystem_and_persistence.md  lod_rendering.md  onboarding.md  plot_subsystem.md  source_file_guide.md  workbook_and_xlsx.md  workspace_and_selection.md
docs/guidelines/: naming_conventions.md  semantic_versioning.md  (+1 more)
requirements/: requirements.txt
scripts/: customize_project.bat  customize_project.py  generate_guid.py  generate_lod_sample.py  init_project.bat  init_submodules.bat  package_customer.py  package_deploy_linux.sh  pm_build.bat  pm_clean.bat  pm_deploy.bat  pm_helpers.bat  pm_pipeline.bat  pm_status.bat  pm_test.bat  project_manager.py  report_generate_html.bat  scaffold_apps.py  test.py
src/common/: CMakeLists.txt
src/common/core/domain/: common_types.cpp  common_types.h
src/my_module/: CMakeLists.txt
src/my_module/adapters/cli/: cli_adapter.cpp  cli_adapter.h
src/my_module/adapters/filesystem/: fs_adapter.cpp  fs_adapter.h
src/my_module/adapters/json/: json_adapter.cpp  json_adapter.h
src/my_module/api/: my_module_api.cpp  my_module_api.h
src/my_module/core/domain/: my_entity.cpp  my_entity.h
src/my_module/core/usecases/: my_usecase.cpp  my_usecase.h
src/my_module/ports/: my_port.h
src/my_module/schema/: my_module_config.schema.json
src/proro/: CMakeLists.txt
src/proro/adapters/cli/: cli_adapter.cpp  cli_adapter.h
src/proro/adapters/filesystem/: fs_adapter.cpp  fs_adapter.h
src/proro/adapters/json/: json_adapter.cpp  json_adapter.h
src/proro/api/: proro_api.cpp  proro_api.h
src/proro/core/domain/: my_entity.cpp  my_entity.h
src/proro/core/usecases/: my_usecase.cpp  my_usecase.h
src/proro/ports/: my_port.h
src/proro/schema/: proro_config.schema.json
src/signal_editor/: CMakeLists.txt
src/signal_editor/adapters/filesystem/: csv_signal_repository.cpp  csv_signal_repository.h  delimited_signal_repository.cpp  delimited_signal_repository.h  json_signal_repository.cpp  json_signal_repository.h  signal_file_repository.cpp  signal_file_repository.h  spreadsheet_xml_signal_repository.cpp  spreadsheet_xml_signal_repository.h  tabular_signal_codec.cpp  tabular_signal_codec.h  tabular_signal_rows.cpp  tabular_signal_rows.h  workbook_model.h  xlsx_signal_repository.cpp  xlsx_signal_repository.h
src/signal_editor/adapters/qt/: branding.cpp  branding.h  constants.hpp  file_list_panel.cpp  file_list_panel.h  icon_theme.cpp  icon_theme.h  main_window.cpp  main_window.h  signal_list_panel.cpp  signal_list_panel.h  signal_lod_pyramid.cpp  signal_lod_pyramid.h  signal_plot_widget.cpp  signal_plot_widget.h  signal_table_panel.cpp  signal_table_panel.h  theme.cpp  theme.h
src/signal_editor/api/: signal_editor_api.cpp  signal_editor_api.h
src/signal_editor/core/domain/: result.h  sample_point.h  signal.cpp  signal.h  signal_library.cpp  signal_library.h
src/signal_editor/core/usecases/: signal_editor_service.cpp  signal_editor_service.h
src/signal_editor/ports/: signal_repository.h
src/sssss/: CMakeLists.txt
src/sssss/adapters/cli/: cli_adapter.cpp  cli_adapter.h
src/sssss/adapters/filesystem/: fs_adapter.cpp  fs_adapter.h
src/sssss/adapters/json/: json_adapter.cpp  json_adapter.h
src/sssss/api/: sssss_api.cpp  sssss_api.h
src/sssss/core/domain/: my_entity.cpp  my_entity.h
src/sssss/core/usecases/: my_usecase.cpp  my_usecase.h
src/sssss/ports/: my_port.h
src/sssss/schema/: sssss_config.schema.json
tests/: CMakeLists.txt
tests/01.data/: sample_automotive_signals_2_tab.csv  sample_automotive_signals_2_tab.xlsx  sample_automotive_signals_2_tab_new.xlsx  sample_enumerated_signals.csv  sample_enumerated_signals.json  sample_enumerated_signals.xml  sample_inline_enumerated_signals.csv  sample_signals.csv  sample_time_column_invalid.csv  sample_time_column_valid.csv
tests/03.unit_test/my_module/: CMakeLists.txt  test_my_entity.cpp  test_my_usecase.cpp
tests/03.unit_test/proro/: CMakeLists.txt  test_my_entity.cpp  test_my_usecase.cpp
tests/03.unit_test/signal_editor/: CMakeLists.txt  test_csv_repository.cpp  test_delimited_signal_repository.cpp  test_json_signal_repository.cpp  test_signal.cpp  test_signal_editor_service.cpp  test_signal_file_repository.cpp  test_signal_library.cpp  test_signal_lod_pyramid.cpp  test_spreadsheet_xml_signal_repository.cpp  test_xlsx_signal_repository.cpp
tests/03.unit_test/sssss/: CMakeLists.txt  test_my_entity.cpp  test_my_usecase.cpp
tests/05.pipeline_test/customize_project/: test_customize_project.py
tests/05.pipeline_test/scaffold_apps/: test_scaffold_apps.py
(+23 files in other folders)
