include(GoogleTest)

# =============================================================================
# Unit tests
# =============================================================================
add_subdirectory(03.unit_test/my_module)

# =============================================================================
# E2E tests (optional — add executables to PATH before running)
# =============================================================================
# add_subdirectory(04.e2e_test/my_module)
